# terml

./: CHANGES.md  LICENSE  README.md  dune  dune-project  terml.opam
.github/: tutorial.tape
examples/: README.md
examples/alternate_screen/: demo.tape  main.ml
examples/cursor_position/: demo.tape  dune  main.ml
examples/polling_events/: demo.tape  main.ml
examples/raw_mode/: demo.tape  main.ml
lib/: ansi.ml  color.ml  color.mli  command.ml  command.mli  cursor.ml  cursor.mli  dune  event.ml  events.ml  input.ml  input_source.ml  io.ml  style.ml  style.mli  terminal.ml  virtual_input.ml
test/: color_test.ml  command_test.ml  dune  event_test.ml  lib_test.ml  style_test.ml
